Fixed spacing issues

--- a/css/andreas.css
+++ b/css/andreas.css
@@ -8,11 +8,11 @@
 	margin-top: 10px;
 }
 #dinaSubject {
-  	width: auto;
+  	width: 160px;
   	height: auto;
 }
 #dinaNamn {
-  	width: 200px;
+  	width: 180px;
   	height: auto;
 }
 #dinaMail {
